# ace-project1

./: .gitmodules  Makefile
project/: CMakeLists.txt  config.fs-uae  convert_images.py  convert_maps.py
project/resources/: forest_tileset.plt  human01.map  human_panel.plt
project/resources/forest_tileset/graphics/tilesets/forest/: terrain.bm
project/resources/graphics/tilesets/forest/neutral/buildings/: gold_mine.bm
project/resources/graphics/ui/human/: panel_2.bm
project/src/: bob_new.c  game.c
projectsample/: CMakeLists.txt  config.fs-uae
